welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:33: error: illegal start of simple expression
	}
        ^